manifests/workloads/uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: uptime.robotwizard.co.uk
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: uptime-kuma
spec:
  type: ExternalName
  externalName: traefik.robotwizard.co.uk
  sessionAffinity: None
