manifests/workloads/uptime-kuma/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-robotwizard-co-uk-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptime.robotwizard.co.uk`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 80
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-robotwizard-co-uk-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.robotwizard.co.uk`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 80
  tls:
    secretName: uptime-cert
